--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,10 @@
 @import 'pages/login';
 @import 'pages/profile';
 @import 'pages/signup';
+
+@import 'components/sidebar';
+@import 'components/post';
+@import 'components/profile-upload';
+@import 'components/post-with-photo';
+@import 'components/post-modal';
+
