--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -115,13 +115,9 @@
 .main_content{
     margin: 20px 0;
     .main_container{
-        width: $main_content_width;
+        max-width: $main_content_width;
         margin: 0 auto;
-
-        .col-md-5{
-            position: sticky;
-            top: 1000px;
-        }
+ 
     }
 }
 // Main content section end
