--- a/sass/abstract/_variable.scss
+++ b/sass/abstract/_variable.scss
@@ -18,9 +18,10 @@ $select_radio_color : #90949c;
 $login_box_shadow : 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
 $login_box_shadow_light : 0 1px 2px rgba(0, 0, 0, .1), 0 1px 1px rgba(0, 0, 0, .1);
 $login_box_shadow-secondary : 0 2px 4px rgba(0, 0, 0, .3), 0 8px 16px rgba(0, 0, 0, .3);
-
+$single_friend-box-shadow : 0px 0px 0px 1px rgba(0, 0, 0, 0.1), 0 1px 1px rgba(0, 0, 0, 0.1);
 // width
 $signup_login_width : 98rem;
 $main_content_width: 90rem;
+$profile_edit_width: 80rem;
 
  
