--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -37,29 +37,39 @@
     }
 
     .post_option{
-        .book_review{
+        .book_review{ 
             i{
-                color: #1876f2;
+                color: #1876f2;  
             }
         }
         .photos{
             i{
-                color: #45bd62;
+                color: #45bd62; 
             }
         }
         .write{
             i{
-                color: #39afd5;
+                color: #39afd5; 
             }
         }
         .book_review,
         .photos,
         .write{
             background: #f1f1f3;
-            padding: 5px 10px;
+            padding: 5px 10px 0;
             border-radius: 5px;
             transition: all .2s;
+ 
+            label{
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
+                .post_option_text {
+                    margin-bottom: 7px; 
+                }
+            }
+            
             &:hover{
                 background-color: #dee1e9;
             }
@@ -71,7 +81,7 @@
                 cursor: pointer;
                 i{
                     font-size: 2rem;
-                    margin-right: 5px;
+                    margin-right: 10px;
                 }
             }
         }
