--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -5,6 +5,10 @@
     // max-height: 85vh;
     box-shadow: $login_box_shadow_light;
 
+    hr{
+        margin: 0;
+    }
+
     &__container{
         max-width: $signup_login_width;
         margin: auto;
@@ -39,6 +43,7 @@
                     transition: all .3s;
                     overflow: hidden;
                     box-shadow: inset 0 0 2px #bbc0ce;
+                    // position: relative;
                       
                     img{
                         width: 100%;
@@ -51,21 +56,27 @@
                     
                 }
                 label{
-                    position: absolute;
-                    top: 100%;
-                    left: 100%;
-                    transform: translate(-100%,-100%);
+                    
 
                     i{
-                        font-size: 30px;
-                        width: 50px;
-                        height: 50px;
+                        font-size: 20px;
+                        width: 45px;
+                        height: 45px;
                         border-radius: 50%;
                         background: #e4e6eb;
-                        line-height: 50px;
-                        text-align: center;
+                        // line-height: 50px;
+                        // text-align: center;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                         cursor: pointer;
                         transition: all .2s;
+
+                        position: absolute;
+                        top: 100%;
+                        left: 100%;
+                   
+                    transform: translate(-100%,-100%);
 
                         &:hover{
                             background: #bbc0ce;
@@ -85,10 +96,18 @@
                     display: none;
                 }
                 label{
-                    cursor: pointer;
-                    i{
-                        font-size: 25px;
-                        margin-right: 5px;
+                    cursor: pointer; 
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .cover_photo_icon{
+                        i{
+                            font-size: 20px;
+                            margin-right: 5px;
+                        }
+                    }
+                    .cover_photo_text{
+                        margin-bottom: 2px;
                     }
                 }
             }
@@ -96,7 +115,7 @@
 
         .profile_text{
             text-align: center;
-            padding: 30px 0;
+            padding: 22px 0 10px;
             .name{
                 font-size: 30px;
                 color: #000;
@@ -121,3 +140,4 @@
     }
 }
 // Main content section end
+ 
