--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'layout/header';
 @import 'layout/navigation';
 
+// Pages
 @import 'pages/login';
 @import 'pages/profile';
 @import 'pages/signup';
@@ -18,6 +19,9 @@
 @import 'pages/book-dtails';
 @import 'pages/edit-details';
 @import 'pages/editprofile';
+@import 'pages/lending_request';
+@import 'pages/lenging-book-list';
+@import 'pages/book_request';
 
 @import 'components/sidebar';
 @import 'components/post';
